# weather-analytics-api

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 38dad16e1eba_create_weather_stats_table.py  4f38fc1993b4_add_unique_constraints_and_indexes.py  a5d3d10daea1_create_weather_table.py
scripts/: seed_db.py
tests/: conftest.py  test_analyze.py  test_api.py  test_ingest.py
weather_analytics_api/: analyze.py  api.py  auth.py  config.py  db.py  ingest.py  main.py  models.py  schemas.py
weather_analytics_api/routers/: auth.py  weather.py
