[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "weather-analytics-api"
version = "0.1.0"
description = "corteva coding challenge (Weather and crop yield data ingestion + REST API for analytics)"
authors = ["Vamsipriya <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "weather_analytics_api" }
]
[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
uvicorn = "^0.23"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
pandas = "^2.2"
alembic = "^1.12"
python-dotenv = "^1.0"
requests = "^2.32.5"
aiosqlite = "^0.21.0"
greenlet = "^3.2.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
pydantic-settings = "^2.10.1"
aiofiles = "^24.1.0"
aiohttp = "^3.12.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
black = "^24.0"
isort = "^6.0"
mypy = "^1.10"
alembic = "^1.16.4"
httpx = "^0.28.1"
anyio = "^4.10.0"
pytest-asyncio = "^1.1.0"
flake8 = "^7.3.0"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
